# study-repository-myself-cmake-practice-moment-V1-cmakelist

./: README.md
code/ch01_helloworld_cmake/: CmakeLists.txt
code/ch01_helloworld_cmake/src/: CmakeLists.txt  main.cpp
code/ch02_lib/: CmakeLists.txt
code/ch02_lib/lib/: CmakeLists.txt  hello.cpp
code/ch02_lib/src/: CmakeLists.txt
code/ch03_link/: CmakeLists.txt
code/ch03_link/src/: CmakeLists.txt
code/ch04_solib/1_MySharedLib/: CMakeLists.txt  library.cpp  library.h
code/ch04_solib/2_test/: CMakeLists - 副本.txt  CMakeLists.txt  main.cpp
code/ok/: Readme.md
